[gd_scene load_steps=5 format=3 uid="uid://8x0urq7oxi1u"]

[ext_resource type="Script" path="res://scenes/props/buildings/build_indicator.gd" id="1_6o306"]
[ext_resource type="PackedScene" uid="uid://bvouwx0ctslr4" path="res://scenes/buildings/turret.tscn" id="2_gyvub"]
[ext_resource type="Texture2D" uid="uid://d37pf3sg0hal0" path="res://assets/textures/Placeholder.png" id="2_pip5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qb24h"]
size = Vector2(15, 15)

[node name="BuildIndicator" type="Node2D"]
script = ExtResource("1_6o306")
building_scene = ExtResource("2_gyvub")

[node name="BuildingSprite" type="Sprite2D" parent="."]
z_index = 11
texture = ExtResource("2_pip5r")
centered = false

[node name="TileCheckerArea" type="Area2D" parent="."]
position = Vector2(8, 8)
collision_layer = 0
collision_mask = 1031

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileCheckerArea"]
shape = SubResource("RectangleShape2D_qb24h")
